Completed Chapter 5 Review

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
               <li><a href="chapter4/tutorial4/studentsfc.xsd">Tutorial 4: studentsfc.xsd</a></li>
               <li><a href="chapter4/tutorial4/studentsrd.xsd">Tutorial 4: studentsrd.xsd</a></li>
             </ul>
-            <li><a href="chapter4/review4/psatsessions.xml"><h3>Review  4</a></h3></li>
+            <li><a href="chapter4/review4/psatsessions.xml"><h3>Review  4</h3></a></li>
           </ul>
             
             <h1>Week 5 - Transforming XML with XSLT and XPath</h1>
             <ul>
                 <li><a href="chapter5/tutorial5/stock.xml"><h3>Tutorial 5</h3></a></li>
+                <li><a href="chapter5/review5/portfolio.xml"><h3>Review 5</h3></a></li>
             </ul>
           
         </ul>
